2011-12-10  Roland Clobus <rclobus@rclobus.nl>
	* meta-server/main.c: Replaced strerror 2x by g_strerror, as found by
	autoscan.

2011-12-07  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c, common/gtk/scrollable-text-view.gob,
	common/gtk/Makefile.am, common/game.c, common/game.h: Store the
	comments in the editor. With many thanks to Micah Bunting
	<amnykon@gmail.com> for the initial versions of this patch.

2011-12-02  Roland Clobus <rclobus@rclobus.nl>
	* pioneers.nsi.in, README.MinGW, MinGW/pioneers.nsi.in,
	MinGW/README.txt, configure.ac: Moved MinGW related stuff to MinGW
	directory. New instructions in the README.txt.
	
2011-12-01  Roland Clobus <rclobus@rclobus.nl>
	* server/lobby.game, server/theme_preview.game: Removed obsolete rule.

2011-11-29  Roland Clobus <rclobus@rclobus.nl>
	* server/pregame.c, server/player.c, server/server.h, common/game.c,
	common/game.h: Allow versioned rules.
	* common/state.c: Easier debugging of the state machine.

2011-11-28  Roland Clobus <rclobus@rclobus.nl>
	* client/ai/ai.c: Removed old debug line.
	* pioneers.nsi.in, MinGW/gdk-pixbuf.loaders, MinGW/Makefile.am,
	MinGW/loaders.cache, README.MinGW: Release of 0.12.5 for Windows. Code
	from the 0.12.5 branch.

2011-11-26  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am: Remove incorrect guard for BUILD_SERVER.

2011-11-21  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/theme.c, common/gtk/theme.h: Speedup of server-gtk by not
	rescaling the theme when it is not necessary.

2011-11-12  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/editor.c, common/gtk/gtkcompat.h, common/gtk/theme.c,
	common/gtk/common_gtk.h, common/gtk/guimap.c, common/gtk/player-icon.c,
	common/gtk/select-game.c, common/gtk/common_gtk.c, configure.ac,
	server/gtk/main.c, client/gtk/plenty.c, client/gtk/name.c,
	client/gtk/resource-view.gob, client/gtk/gold.c, client/gtk/player.c,
	client/gtk/legend.c, client/gtk/quote-view.c, client/gtk/gameover.c,