@@ -807,7 +807,7 @@ static void launch_server_gtk(G_GNUC_UNUSED GtkWidget * widget,
 			   &error)) {
 		/* Error message when program %1 is started, reason is %2 */
 		log_message(MSG_ERROR,
-			    _("Error starting %s: %s"),
+			    _("Error starting %s: %s\n"),
 			    PIONEERS_SERVER_GTK_PATH, error->message);
 		g_error_free(error);
 	}
